--- a/index.html
+++ b/index.html
@@ -3,41 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apakhu Token</title>
+    <title>Apakhu Token - The Meme Revolution</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background-color: #1a1a1a;
+            color: #fff;
             padding: 50px;
         }
         .container {
-            background: white;
+            background: #222;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+            max-width: 600px;
             margin: auto;
         }
         h1 {
-            color: #333;
+            color: #00ccff;
         }
         .contract {
             font-size: 16px;
-            word-break: break-all;
-            background: #eee;
+            word-break: break-word;
+            background: #333;
             padding: 10px;
             border-radius: 5px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            background: #00ccff;
+            color: #000;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background: #0099cc;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Apakhu Token</h1>
-        <p>Decentralized future starts here.</p>
+        <h1>Apakhu Token 🚀</h1>
+        <p>The Meme Revolution Begins! Join the most chaotic and legendary meme coin in the universe!</p>
         <p><strong>Contract Address:</strong></p>
         <p class="contract">0x14f1c88cf6bae6edaa613eb86544c078e8cbbe18</p>
-        <p>Stay tuned for more updates.</p>
+        <a href="https://pancakeswap.finance/" class="btn">Buy on PancakeSwap</a>
+        <p>🔹 Zero Utility, 100% Fun! 🔹</p>
+        <p>Apakhu is here to take over the meme world. Don't miss the ride! 🚀🌕</p>
+        <p><strong>💎 Only 10 Million Supply! Scarcity Meets Hype! 💎</strong></p>
+        <p>🔥 Community-driven, meme-powered, and built for the moon! 🌕</p>
+        <p>🚀 No Dev Taxes, No Presale – Just Pure Fun!</p>
     </div>
 </body>
 </html>
