--- a/index.html
+++ b/index.html
@@ -3,60 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apakhu Token - The Meme Revolution</title>
+    <title>Apakhu Token - The Ultimate Meme Coin</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #1a1a1a;
+            background-color: #0d0d0d;
             color: #fff;
-            padding: 50px;
+            margin: 0;
+            padding: 0;
+        }
+        .hero {
+            background: url('https://source.unsplash.com/1600x900/?crypto,meme') center/cover;
+            padding: 100px 20px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+        }
+        .hero h1 {
+            font-size: 50px;
+            color: #00ccff;
+        }
+        .hero p {
+            font-size: 22px;
+            max-width: 600px;
+            margin: auto;
         }
         .container {
+            padding: 50px 20px;
+        }
+        .contract, .tokenomics, .buy-guide {
             background: #222;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
             max-width: 600px;
-            margin: auto;
-        }
-        h1 {
-            color: #00ccff;
-        }
-        .contract {
-            font-size: 16px;
-            word-break: break-word;
-            background: #333;
-            padding: 10px;
-            border-radius: 5px;
+            margin: 20px auto;
         }
         .btn {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 15px 25px;
             margin-top: 20px;
             background: #00ccff;
             color: #000;
             text-decoration: none;
             font-weight: bold;
             border-radius: 5px;
+            font-size: 18px;
         }
         .btn:hover {
             background: #0099cc;
         }
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background: #111;
+            color: #888;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="hero">
         <h1>Apakhu Token 🚀</h1>
-        <p>The Meme Revolution Begins! Join the most chaotic and legendary meme coin in the universe!</p>
-        <p><strong>Contract Address:</strong></p>
-        <p class="contract">0x14f1c88cf6bae6edaa613eb86544c078e8cbbe18</p>
-        <a href="https://pancakeswap.finance/" class="btn">Buy on PancakeSwap</a>
-        <p>🔹 Zero Utility, 100% Fun! 🔹</p>
-        <p>Apakhu is here to take over the meme world. Don't miss the ride! 🚀🌕</p>
-        <p><strong>💎 Only 10 Million Supply! Scarcity Meets Hype! 💎</strong></p>
-        <p>🔥 Community-driven, meme-powered, and built for the moon! 🌕</p>
-        <p>🚀 No Dev Taxes, No Presale – Just Pure Fun!</p>
+        <p>The most legendary meme coin of all time! Get in before it’s too late.</p>
     </div>
+    
+    <div class="container">
+        <div class="contract">
+            <h2>📜 Contract Address</h2>
+            <p>0x14f1c88cf6bae6edaa613eb86544c078e8cbbe18</p>
+            <a href="https://pancakeswap.finance/" class="btn">Buy on PancakeSwap</a>
+        </div>
+
+        <div class="tokenomics">
+            <h2>💎 Tokenomics</h2>
+            <p><strong>Max Supply:</strong> 10,000,000</p>
+            <p><strong>Community Driven:</strong> 100% owned by you, the Apakhu Army!</p>
+            <p><strong>No Dev Taxes:</strong> Fair launch, no tricks, just pure fun.</p>
+        </div>
+
+        <div class="buy-guide">
+            <h2>🛒 How to Buy</h2>
+            <p>1️⃣ Get a wallet (MetaMask or Trust Wallet)</p>
+            <p>2️⃣ Buy BNB & add it to your wallet</p>
+            <p>3️⃣ Swap BNB for Apakhu on PancakeSwap</p>
+            <p>4️⃣ HODL and enjoy the ride! 🚀</p>
+        </div>
+    </div>
+    
+    <footer>
+        <p>Join the Apakhu Army! Follow us on social media.</p>
+    </footer>
 </body>
 </html>
