--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     
     <div class="container">
         <div class="contract">
-            <h2>📜 Contract Address</h2>
-            <p>0x14f1c88cf6bae6edaa613eb86544c078e8cbbe18</p>
+            <h2>📜 Polygon Blockchain Contract Address</h2>
+            <p>0x4870cec83e0cf18b4d08c02a305a9fb6e1c65cd4</p>
             <a href="https://pancakeswap.finance/" class="btn">Buy on PancakeSwap</a>
         </div>
 
@@ -79,14 +79,12 @@
             <p><strong>Community Driven:</strong> 100% owned by you, the Apakhu Army!</p>
             <p><strong>No Dev Taxes:</strong> Fair launch, no tricks, just pure fun.</p>
         </div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJPq_nzUOerDgGthR1Oe1kVbYqv6POWzt8cJMTLZEDVOUcmw/viewform?embedded=true" 
+        width="100%" 
+        height="800px" 
+        frameborder="0">Loading…</iframe>
 
-        <div class="buy-guide">
-            <h2>🛒 How to Buy</h2>
-            <p>1️⃣ Get a wallet (MetaMask or Trust Wallet)</p>
-            <p>2️⃣ Buy BNB & add it to your wallet</p>
-            <p>3️⃣ Swap BNB for Apakhu on PancakeSwap</p>
-            <p>4️⃣ HODL and enjoy the ride! 🚀</p>
-        </div>
+   
     </div>
     
     <footer>
