--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         <div class="contract">
             <h2>📜 Polygon Blockchain Contract Address</h2>
             <p>0x4870cec83e0cf18b4d08c02a305a9fb6e1c65cd4</p>
+            <p>Suggestion will be accepted</p>
+            <p>admin@apakhu.xyz</p>
         </div>
 
         <div class="tokenomics">
