--- a/index.html
+++ b/index.html
@@ -91,5 +91,15 @@
     <footer>
         <p>Join the Apakhu Army! Follow us on social media.</p>
     </footer>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7BE4GHGMQR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7BE4GHGMQR');
+</script>
 </body>
 </html>
